--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: utils
 Priority: extra
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 XSBC-Original-Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
-Build-Depends: dpkg-dev (>= 1.16.1~), debhelper (>= 9.20130604), pkg-config, libglib2.0-dev (>= 2.28), xutils-dev, libcap-ng-dev, libnuma-dev [!hurd-any !kfreebsd-any !armel !armhf !s390x]
+Build-Depends: dpkg-dev (>= 1.16.1~), debhelper (>= 9), pkg-config, libglib2.0-dev (>= 2.28), xutils-dev, libcap-ng-dev, libnuma-dev [!hurd-any !kfreebsd-any !armel !armhf !s390x]
 Standards-Version: 3.9.6
 Homepage: https://github.com/Irqbalance/irqbalance
 
